--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,11 @@
             <artifactId>jave-all-deps</artifactId>
             <version>3.3.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency>
 
     </dependencies>
 
