--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,22 @@ spring:
     username: root
     password: 256817
     type: com.alibaba.druid.pool.DruidDataSource
+  mail:
+    host: smtp.163.com
+    # 发送者的邮箱账号
+    username: wyx1627082750@163.com
+    # 邮箱密码授权码
+    password: NKPWNKROEOHMYXDB
+    default-encoding: utf-8
+    properties:
+      mail:
+        debug: true
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+            required: true
+
 
 mybatis-plus:
   configuration:
